[gd_scene load_steps=6 format=3 uid="uid://dmjnumc4s1odt"]

[ext_resource type="Script" path="res://Scenes/WinScene.gd" id="1_lni7q"]
[ext_resource type="FontFile" uid="uid://dp2x8wc4lajvs" path="res://Fonts/PixeloidSansBold.ttf" id="2_snaga"]
[ext_resource type="FontFile" uid="uid://bfy8w7ws7vpfq" path="res://Fonts/PixeloidSans.ttf" id="3_2aiab"]
[ext_resource type="AudioStream" uid="uid://huopgdk4hekw" path="res://Audio/SFX/tada.mp3" id="4_inj0j"]

[sub_resource type="LabelSettings" id="LabelSettings_em0wn"]
font = ExtResource("2_snaga")

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lni7q")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0.658824, 0.607843, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -33.0
offset_right = 21.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "YOU WIN!!!"
label_settings = SubResource("LabelSettings_em0wn")
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="ColorRect2/MarginContainer/VBoxContainer"]
texture_filter = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2aiab")
theme_override_font_sizes/font_size = 13
text = "Main Menu"
icon_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_inj0j")
autoplay = true

[connection signal="pressed" from="ColorRect2/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
